# structureboost

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: Untitled  api_doc_stb.rst  conf.py  examples.rst  feat_config.rst  feat_config_2.rst  get_started.rst  index.rst  install.rst  model_config.rst  overview.rst  stb_faq.rst
examples/: CA_County_Classification.ipynb  CA_County_Deep_Dive.ipynb  CA_County_Regression.ipynb  MoCap_Spatial.ipynb  TargetStructureMonthDemo.ipynb
structureboost/: __init__.py  coarsage.c  coarsage.pyx  graphs.c  graphs.pyx  pdf_conformal.c  pdf_conformal.pyx  pdf_discrete.c  pdf_discrete.pyx  pdf_group.c  pdf_group.pyx  pdf_set.c  pdf_set.pyx  prob_regr_unit.c  prob_regr_unit.pyx  prob_regressor.c  prob_regressor.pyx  structure_dt.c  structure_dt.pyx  structure_dt_multi.c  structure_dt_multi.pyx  structure_gb.c  structure_gb.pyx  structure_gb_multi.c  structure_gb_multi.pyx  structure_rf.c  structure_rf.pyx  structure_rfdt.c  structure_rfdt.pyx  utils.py
structureboost/tests/: test_basics.py  test_coarsage_1.py  test_dt.py  test_gb.py  test_graphs.py  test_multi_1.py  test_pdfgroup1.py  test_predict_options.py  test_prob_reg_1.py  test_shap.py
structureboost/tests/data_for_tests/: CA_PRCP_sm.csv  df_prem_pred_test.csv  df_prem_pred_train.csv  ins_data.csv  seattle_house_sample_data.csv  test_set_vor.csv  train_set_vor.csv
