[project]


name = "structureboost"
version = "0.6.0"
dependencies = ["pandas>=1.3",
        "numpy>=1.23.5",
        "scipy>=1.6",
        "matplotlib>=1.0",
        "joblib>=0.14.1",
        "ml_insights>=1.0.5"
]
authors = [
  { name="Brian Lucena", email="brian@numeristical.com" },
]
description = "Gradient Boosting and Probabilistic Regression with categorical structure"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = ["Cython>=3.1.0b1", "build", "setuptools"]

[build-system]
requires = ["setuptools", "wheel", "Cython>=3.1.0b1","numpy>=2.0.0","scipy>=1.15",]
